feat: create DELETE /reservations
